--- a/delivery/templates/add_restaurant.html
+++ b/delivery/templates/add_restaurant.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Add Restaurant</h3>
-    <form method="post" action="{% url 'add_restaurant_page' %}">
+    <form method="POST" action="{% url 'add_restaurant' %}">
         {% csrf_token %}
         <label for="name">Restaurant Name:</label>
         <input type="text" id="name" name="name" required><br><br>
