--- a/delivery/templates/confirm_delete.html
+++ b/delivery/templates/confirm_delete.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>admin page</title>
+    <title>delete Page</title>
 </head>
 <body>
-    <h1>Welcome ADMIN!</h1>
-    <a href="open_add_restaurant">Add new Restaurant</a>
-    <br>
-    <br>
-    <a href="#">Show Restaurants</a>
+    <h3>Restaurant <span style="color: red;">Deleted</span></h3>
 </body>
 </html>
